syntax = "proto3";

package account;

message AccountInfo {
  string name = 1;
  int32 person_id = 2;
  repeated string device_name = 3;
}